syntax = "proto3";
package user;
option go_package = "/pb";

enum Gender {
    GENDER_UNKNOWN = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
}

message LoginRequest {
    string mobile = 1;
    string email = 2;
    string password = 3;
    string validate = 4;
}

message LoginResp {
    int64 id = 1;
    string name = 2;
    Gender gender = 3;
    string email = 4;
    string mobile = 5;
}

message RegisterRequest{
    string name = 1;
    string email = 2;
    Gender gender = 3;
    string mobile = 4;
    string password = 5;
}

message RegisterResp{
    int64 id = 1;
    string name = 2;
    Gender gender = 3;
    string email= 4;
    string mobile = 5;
}
message UserInfoRequest{
    int64 id = 1;
}

message UserInfoResp{
    int64 id = 1;
    string name = 2;
    Gender gender = 3;
    string mobile = 4;
    string email = 5;
}

message ModifyInfoRequest{
    int64 id = 1;
    string name = 2;
    Gender gender = 3;
    string mobile = 4;
    string email = 5;
}

service User {
    rpc Login(LoginRequest) returns (LoginResp);
    rpc Register(RegisterRequest) returns (RegisterResp);
    rpc UserInfo(UserInfoRequest) returns (UserInfoResp);
    rpc ModifyInfo(ModifyInfoRequest) returns ();
}